- About.css: Improved styling for the About page to enhance visual appeal and consistency. - About.js: Updated layout and content structure for better readability and user experience. - About.module.css: Added and adjusted CSS modules for more precise styling of About page sections. - HomePage.js: Refined the layout and styling using react-bootstrap for a more professional look and better responsiveness. - ImageCompareSlider.css: Updated CSS to ensure the image comparison slider is responsive and visually appealing on all screen sizes. - ShApp.js: Rewritten using react-bootstrap for consistent styling and better integration with the rest of the application. - index.css: Applied global style improvements to ensure consistency and enhance the overall look and feel of the app.

--- a/Frontend/src/components/About/About.css
+++ b/Frontend/src/components/About/About.css
@@ -1,11 +1,13 @@
 .accordion {
-  max-width: 95%;
-  margin: 1em auto;
+  max-width: 100dvw;
+  margin: 0 auto;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
 }
-
+body {
+  overflow-x: hidden;
+}
 .accordion-item {
   background-color: #fff;
   margin: 0;
