--- a/Frontend/src/components/ImageCompareSlider/ImageCompareSlider.css
+++ b/Frontend/src/components/ImageCompareSlider/ImageCompareSlider.css
@@ -1,5 +1,5 @@
 .image-compare-slider {
-  padding: 2rem 0;
+  padding: 0rem 0;
 }
 
 .image-compare-slider .before-after-slider {
