--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -18,7 +18,7 @@ body {
   font-family: "Roboto";
   opacity: 1;
   overflow-x: hidden;
-  z-index: 10;
+  z-index: 1;
   background: linear-gradient(to right, #f0f2f5, #cfd9df);
 }
 
